tests/fixtures/invalid/round_list_none.py
# Cannot call round() with List[int], None
x = round([1, 2, 3], None)
